@@ -6,6 +6,8 @@ This file lists the changes in each six version.
 Development version
 -------------------
 
+- Issue #20: Fix tests if tkinter is not available.
+
 - Issue #17: Define callable to be builtin callable when it is available again
   in Python 3.2+.
 
